--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Georgia', serif;
     box-sizing: border-box;
 }
 body{
@@ -14,7 +14,7 @@ body{
     max-width: 700px;
 }
 .display{
-    width: 100%;
+    width: 65%;
     margin-top: 60px;
     margin-bottom: 40px;
     background: #172B23;
@@ -23,25 +23,30 @@ body{
     align-items: center;
     justify-content: space-between;
     padding: 35px 25px;
-    border-radius: 35px;
+    border: 2px solid #E2D7AB;
+    border-radius: 40px;
 }
 .container h1{
     font-weight: 500;
     font-size: 45px;
 }
 .container h1 span{
+    background: #E2D7AB;
     color: #111613;
-    border-bottom: 4px solid #172B23;
-    padding-bottom: 7px;
+    border-radius: 15px;
+    padding: 2px 10px;
 }
 .display img{
-    width: 25px;
+    width: 30px;
     cursor: pointer;
+    padding: 2px 2px;
 }
 .display input{
     border: 0;
     outline: 0;
-    font-size: 20px;
+    font-size: 28px;
+    text-align: center;
+    padding: 1px 3px;
     background: #E2D7AB;
     border-radius: 10px;
 }
@@ -54,12 +59,12 @@ body{
     outline: 0;
     background: #E2D7AB;
     color: #111613;
-    font-size: 22px;
-    font-weight: 300;
+    font-size: 18px;
+    font-weight: 100;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 16px 26px;
-    border-radius: 5px;
+    padding: 10px 20px;
+    border-radius: 50px;
     cursor: pointer;
 }
