--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+:root{
+    --main-color: #E2D7AB;
+    --color-black: #111613;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -7,7 +12,7 @@
 
 body {
     background: #2F6542;
-    color: #E2D7AB;
+    color: var(--main-color);
 }
 
 .container {
@@ -21,12 +26,12 @@ body {
     margin-top: 60px;
     margin-bottom: 40px;
     background: #172B23;
-    color: black;
+    color: var(--color-black);
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 35px 25px;
-    border: 2px solid #E2D7AB;
+    border: 2px solid var(--main-color);
     border-radius: 40px;
 }
 
@@ -36,8 +41,8 @@ body {
 }
 
 .container h1 span {
-    background: #E2D7AB;
-    color: #111613;
+    background: var(--main-color);
+    color: var(--color-black);
     border-radius: 15px;
     padding: 2px 10px;
 }
@@ -54,7 +59,7 @@ body {
     font-size: 28px;
     text-align: center;
     padding: 1px 3px;
-    background: #E2D7AB;
+    background: var(--main-color);
     border-radius: 10px;
 }
 
@@ -66,8 +71,8 @@ body {
 .container button {
     border: 0;
     outline: 0;
-    background: #E2D7AB;
-    color: #111613;
+    background: var(--main-color);
+    color: var(--color-black);
     font-size: 18px;
     font-weight: 100;
     display: flex;
