--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,26 @@ body {
     padding: 2px 10px;
 }
 
+.container-checkboxes h1 {
+    font-weight: bold;
+    font-size: 20px;
+    justify-self: center;
+    margin-bottom: 3px;
+
+}
+
+.container-checkboxes {
+    width: 65%;
+    margin-top: 20px;
+    background: var(--main-color);
+    color: var(--color-black);
+    font-size: 20px;
+    padding: 4px 8px;
+    border: 2px solid var(--color-black);
+    border-radius: 25px;
+    text-align: center;
+}
+
 .display img {
     width: 30px;
     cursor: pointer;
