--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Georgia', serif;
+    font-family: "Oswald", sans-serif;
     box-sizing: border-box;
 }
 
@@ -102,3 +102,50 @@ body {
     border-radius: 50px;
     cursor: pointer;
 }
+
+/* toggle-pill-color */
+.toggle-pill-color input[type="checkbox"] {
+    display: none;
+}
+
+.toggle-pill-color input[type="checkbox"] + label {
+    display: block;
+    position: relative;
+    width: 2em;
+    height: 1.2em;
+    margin-bottom: 20px;
+    border-radius: 1em;
+    background: #e84d4d;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-transition: background 0.1s ease-in-out;
+    transition: background 0.1s ease-in-out;
+}
+
+.toggle-pill-color input[type="checkbox"] + label:before {
+    content: "";
+    display: block;
+    width: 0.8em;
+    height: 0.8em;
+    border-radius: 1em;
+    background: #fff;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+    position: absolute;
+    left: 0.2em;
+    top: 0.2em;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+
+.toggle-pill-color input[type="checkbox"]:checked + label {
+    background: #2F6542;
+}
+
+.toggle-pill-color input[type="checkbox"]:checked + label:before {
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+    left: 1em;
+}
+/* toggle-pill-color end */
